[TESTS] adds more stuff to hello world program

--- a/test/fixtures/hello-world/common.cfg
+++ b/test/fixtures/hello-world/common.cfg
@@ -8,13 +8,12 @@ cc = Obj(
 
 link = Obj(
   tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/em++',
-  flags=[ '-pthread' ],
-  libs=[ 'stdc++' ]
+  flags=[ '-pthread' ]
 )
 
 make = Obj(
-  tool='make',
-  flags=[ '-s' ],
+  tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/emmake',
+  flags=[ 'make' ],
   force_flag='-B',
   all_pseudo_target='all'
 )
