[TESTS] simplifies hello world config

--- a/test/fixtures/hello-world/common.cfg
+++ b/test/fixtures/hello-world/common.cfg
@@ -1,8 +1,6 @@
 cc = Obj(
   tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/em++',
-  flags=[ '--std=c++14', '-Weverything',
-          '-Wno-c++98-compat',  '-Wno-shadow',
-          '-Wno-global-constructors', '-Wno-padded' ],
+  flags=[ '--std=c++14' ],
   hdrs_flags=[ '-MM' ]
 )
 
