[FEATURE] adds environment variables to lurk build and uses defaults

--- a/test/fixtures/hello-world/common.cfg
+++ b/test/fixtures/hello-world/common.cfg
@@ -1,16 +1,17 @@
+
 cc = Obj(
-  tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/em++',
+  tool=os.environ['empp'],
   flags=[ '--std=c++14' ],
   hdrs_flags=[ '-MM' ]
 )
 
 link = Obj(
-  tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/em++',
+  tool=os.environ['empp'],
   flags=[ '-pthread' ]
 )
 
 make = Obj(
-  tool='/home/danny-ubuntu/Documents/git/lurk/emsdk/emscripten/master/emmake',
+  tool=os.environ['emmake'],
   flags=[ 'make' ],
   force_flag='-B',
   all_pseudo_target='all'
