[BUGS] fixes a lot of bugs

--- a/static/init/common.cfg
+++ b/static/init/common.cfg
@@ -1,7 +1,7 @@
 
 cc = Obj(
   tool=os.environ['empp'],
-  flags=[ '--std=c++14', '-Wno-warn-absolute-paths' ],
+  flags=[ '-std=c++14', '-Wno-warn-absolute-paths' ],
   hdrs_flags=[ '-MM' ]
 )
 
