--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "node_modules/.bin/mocha && node_modules/.bin/jshint bin/*.js lib/*.js lib/**/*.js test/*.js",
     "postinstall": "node scripts/postinstall.js"
   },
   "bin": {
@@ -36,6 +36,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^2.3.0",
+    "jshint": "^2.7.0",
     "mocha": "^2.2.4"
   },
   "dependencies": {
@@ -44,6 +45,7 @@
     "colors": "^1.1.0",
     "commander": "^2.8.1",
     "handlebars": "^3.0.3",
+    "prepend-file": "^1.3.0",
     "prompt": "^0.2.14"
   }
 }
